# render-core

./: .gitignore  .gitmodules  CMakeLists.txt
render-core/: CMakeLists.txt
render-core/inc/: color.h  input.h  post_processing.h  random.h  ray.h  shader.h  texture.h  utils.h  window.h
render-core/src/: input.cpp  logger.cpp  main.cpp  post_processing.cpp  shader.cpp  texture.cpp  window.cpp
